[package]
name = "bongo"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3"

[dependencies]
device_query = "4.0.1"
rand = "0.9"
softbuffer = "0.4.8"
tao = "0.34.5"
tiny-skia = "0.12.0"

[package.metadata.bundle]
name = "Bongo"
identifier = "com.flatypus.bongo"
icon = ["icon.icns"]
category = "public.app-category.entertainment"

[patch.crates-io]
softbuffer = { git = "https://github.com/flatypus/softbuffer.git", branch = "hinson/alpha-hack" }
